<resources>
    <string name="app_name">FUT-BASE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="imageUrl">ImageUrl</string>
    <string name="full_name">Full name</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="nation">Nation</string>
    <string name="byNation">Search by nation</string>
    <string name="byName">Search by name</string>
</resources>
